# BackgammonOnBevy

./: Cargo.toml  README.md
.github/workflows/: release.yaml
assets/models/: board.glb  dice.glb  license.txt  piece.glb  scene.gltf
examples/: gpt_game.rs
src/: backgammon.rs  events.rs  game.rs  main.rs  ui.rs
