[package]
name = "bevy_backgammon"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.10", features = ["jpeg"] }
rand = "0.8.5"
bevy_gltf = "0.10"
bevy-inspector-egui = { version = "0.18.1" }
bevy_dice = { version = "0.3.2" }
bevy_rapier3d = { version = "0.21.0", features = [
    "simd-stable",
    "debug-render",
] }
